--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,12 @@ img {
 }
 	
 
-.style, h3 {
+.style {
 	font-family:'Lucida Handwriting', cursive;
 }
 
 .color {
-	color:#80ff99;
+	color:#00ff25;
 }
 
 
